--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1551,12 +1551,29 @@ svg {
     animation: fadeUp 0.8s ease forwards;
 }
 
-.skill-item:nth-child(1){animation-delay:0.2s}
-.skill-item:nth-child(2){animation-delay:0.4s}
-.skill-item:nth-child(3){animation-delay:0.6s}
-.skill-item:nth-child(4){animation-delay:0.8s}
-.skill-item:nth-child(5){animation-delay:1s}
-.skill-item:nth-child(6){animation-delay:1.2s}
+.skill-item:nth-child(1) {
+    animation-delay: 0.2s
+}
+
+.skill-item:nth-child(2) {
+    animation-delay: 0.4s
+}
+
+.skill-item:nth-child(3) {
+    animation-delay: 0.6s
+}
+
+.skill-item:nth-child(4) {
+    animation-delay: 0.8s
+}
+
+.skill-item:nth-child(5) {
+    animation-delay: 1s
+}
+
+.skill-item:nth-child(6) {
+    animation-delay: 1.2s
+}
 
 .skill-header {
     width: 150px;
@@ -1637,10 +1654,25 @@ svg {
     animation: radialFill 1.8s ease forwards;
 }
 
-.r1 { stroke: #38bdf8; --val: 80; }
-.r2 { stroke: #22c55e; --val: 75; }
-.r3 { stroke: #facc15; --val: 85; }
-.r4 { stroke: #fb7185; --val: 75; }
+.r1 {
+    stroke: #38bdf8;
+    --val: 80;
+}
+
+.r2 {
+    stroke: #22c55e;
+    --val: 75;
+}
+
+.r3 {
+    stroke: #facc15;
+    --val: 85;
+}
+
+.r4 {
+    stroke: #fb7185;
+    --val: 75;
+}
 
 .radial-percent {
     position: absolute;
@@ -1659,7 +1691,9 @@ svg {
 
 /* ANIMATIONS */
 @keyframes fillProgress {
-    to { width: var(--level); }
+    to {
+        width: var(--level);
+    }
 }
 
 @keyframes radialFill {
@@ -1684,14 +1718,188 @@ svg {
 }
 
 
-
-
-
-
 /* new and correct */
 
-
 /* Skills Section Part End  */
+
+/* Latest Project section part start  */
+
+.main-text {
+    padding: 130px;
+    /* margin-top: 25px; */
+}
+
+.main-text h2 {
+    font-size: 60px;
+    line-height: 1;
+    text-align: center;
+}
+
+.main-text h2 span {
+    color: #0ef;
+}
+
+.portfolio-content {
+    margin-top: 70px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(359px, auto));
+    gap: 20px;
+}
+
+.row {
+    /* position: relative;
+    overflow: hidden;
+    border-radius: 8px;
+    cursor: pointer; */
+
+    position: relative;
+    overflow: hidden;
+    border-radius: 8px;
+    cursor: pointer;
+    height: 260px;
+     transition: transform 0.4s ease, box-shadow 0.4s ease;
+}
+
+.row img {
+    /* width: 100%;
+    border-radius: 8px;
+    display: block;
+    transition: transform 0.5s; */
+
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+    display: block;
+    transition: transform 0.5s;
+}
+
+
+
+.layer {
+    /* width: 100%;
+    height: 0;
+    background: linear-gradient(rgba(0,0,0,0.1),#0ef);
+    position: absolute;
+    border-radius: 8px;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 0 40px;
+    transition: height 0.5s; */
+
+    width: 100%;
+    height: 0;
+    background: linear-gradient(rgba(0, 0, 0, 0.1), #0ef);
+    position: absolute;
+    border-radius: 8px;
+    left: 0;
+    bottom: 0;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    text-align: center;
+    padding: 20px;
+    transition: height 0.5s;
+
+}
+
+/* .layer::-webkit-scrollbar{
+    width: 4px;
+}
+.layer::-webkit-scrollbar-thumb{
+    background: #000;
+    border-radius: 10px;
+} */
+
+
+.layer h5 {
+    color: #000;
+    font-size: 20px;
+    font-weight: 600px;
+    margin-bottom: 15px;
+}
+
+.layer p {
+    /* color: #000;
+    font-size: 1rem;
+    line-height: 1.8; */
+
+    color: #000;
+     /* color: #3406b3; */
+    font-size: 14px;
+    line-height: 1.6;
+}
+
+.layer i {
+    color: #ff004f;
+    margin-top: 20px;
+    font-size: 20px;
+    background: #fff;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+
+
+}
+
+/* .row:hover img {
+    transform: scale(1.1);
+} */
+
+.row:hover{
+    transform: translateY(-12px); 
+    box-shadow: 0 15px 30px rgba(0,0,0,0.25);
+}
+/* .row:hover{
+    transform: translateY(-10px) scale(1.03);
+} */
+
+.row:hover .layer {
+    height: 100%;
+    opacity: 1;
+}
+
+
+.layer h5,
+.layer p,
+.layer a{
+    transform: translateY(20px);
+    opacity: 0;
+    transition: all 0.4s ease;
+}
+
+.row:hover .layer h5,
+.row:hover .layer p,
+.row:hover .layer a{
+    transform: translateY(0);
+    opacity: 1;
+}
+
+/*  */
+.project-link i{
+    color: #ff004f;   
+    font-size: 22px;
+}
+
+
+
+
+
+/* Latest Project section part end  */
+
+
 
 
 /* Header & Home Section Part Start */
