--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1551,29 +1551,29 @@ svg {
     animation: fadeUp 0.8s ease forwards;
 }
 
-.skill-item:nth-child(1) {
-    animation-delay: 0.2s
+/* .skill-item:nth-child(1) {
+    animation-delay: 0.2s;
 }
 
 .skill-item:nth-child(2) {
-    animation-delay: 0.4s
+    animation-delay: 0.4s;
 }
 
 .skill-item:nth-child(3) {
-    animation-delay: 0.6s
+    animation-delay: 0.6s;
 }
 
 .skill-item:nth-child(4) {
-    animation-delay: 0.8s
+    animation-delay: 0.8s;
 }
 
 .skill-item:nth-child(5) {
-    animation-delay: 1s
+    animation-delay: 1s;
 }
 
 .skill-item:nth-child(6) {
-    animation-delay: 1.2s
-}
+    animation-delay: 1.2s;
+} */
 
 .skill-header {
     width: 150px;
@@ -1626,6 +1626,33 @@ svg {
     animation: fadeUp 1s ease forwards;
 }
 
+/* Professional Skills */
+/* .radial-skill:nth-child(1) {
+    animation-delay: 0.2s;
+}
+
+.radial-skill:nth-child(2) {
+    animation-delay: 0.4s;
+}
+
+.radial-skill:nth-child(3) {
+    animation-delay: 0.6s;
+}
+
+.radial-skill:nth-child(4) {
+    animation-delay: 0.8s;
+} */
+
+
+circle {
+    fill: none;
+    stroke-width: 10;
+    stroke-dasharray: 440;
+    /* stroke-dashoffset: calc(440 - (440 * var(--val)) / 100);
+    animation: progress 1.5s ease forwards; */
+    animation: progress 1.5s ease forwards, colorSpin 1.5s linear forwards;
+}
+
 .radial-container {
     width: 130px;
     height: 130px;
@@ -1654,24 +1681,29 @@ svg {
     animation: radialFill 1.8s ease forwards;
 }
 
+/* Professional Skills animation */
 .r1 {
     stroke: #38bdf8;
     --val: 80;
+    animation-delay: 0.2s;
 }
 
 .r2 {
     stroke: #22c55e;
     --val: 75;
+    animation-delay: 0.4s;
 }
 
 .r3 {
     stroke: #facc15;
     --val: 85;
+    animation-delay: 0.6s;
 }
 
 .r4 {
     stroke: #fb7185;
     --val: 75;
+    animation-delay: 0.8s;
 }
 
 .radial-percent {
@@ -1706,6 +1738,17 @@ svg {
     to {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+@keyframes progress {
+    from {
+        stroke-dashoffset: 440;
+        /* 0% */
+    }
+
+    to {
+        stroke-dashoffset: calc(440 - (440 * var(--val)) / 100);
     }
 }
 
@@ -1757,7 +1800,7 @@ svg {
     border-radius: 8px;
     cursor: pointer;
     height: 260px;
-     transition: transform 0.4s ease, box-shadow 0.4s ease;
+    transition: transform 0.4s ease, box-shadow 0.4s ease;
 }
 
 .row img {
@@ -1834,7 +1877,7 @@ svg {
     line-height: 1.8; */
 
     color: #000;
-     /* color: #3406b3; */
+    /* color: #3406b3; */
     font-size: 14px;
     line-height: 1.6;
 }
@@ -1858,10 +1901,11 @@ svg {
     transform: scale(1.1);
 } */
 
-.row:hover{
-    transform: translateY(-12px); 
-    box-shadow: 0 15px 30px rgba(0,0,0,0.25);
+.row:hover {
+    transform: translateY(-12px);
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.25);
 }
+
 /* .row:hover{
     transform: translateY(-10px) scale(1.03);
 } */
@@ -1874,7 +1918,7 @@ svg {
 
 .layer h5,
 .layer p,
-.layer a{
+.layer a {
     transform: translateY(20px);
     opacity: 0;
     transition: all 0.4s ease;
@@ -1882,24 +1926,175 @@ svg {
 
 .row:hover .layer h5,
 .row:hover .layer p,
-.row:hover .layer a{
+.row:hover .layer a {
     transform: translateY(0);
     opacity: 1;
 }
 
 /*  */
-.project-link i{
-    color: #ff004f;   
+.project-link i {
+    color: #ff004f;
     font-size: 22px;
 }
 
-
-
-
-
 /* Latest Project section part end  */
 
+/* Contact section part start */
 
+.contact {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 3rem;
+    padding-left: 30px;
+    margin-top: 30px;
+}
+
+.contact-text h2 {
+    font-size: 90px;
+    line-height: 1;
+    text-align: center;
+}
+
+.contact-text h2 span {
+    color: #0ef;
+}
+
+.contact-text h4 {
+    margin: 15px 0;
+    color: rgb(228, 228, 228);
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 100px;
+}
+
+.contact-text p {
+    color: rgb(177, 177, 177);
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 2rem;
+}
+
+.contact-list {
+    margin-bottom: 3rem;
+}
+
+.contact-list li {
+    margin-bottom: 10px;
+    display: block;
+}
+
+.contact-list i {
+    display: inline-block;
+    color: #0ef;
+    font-size: 20px;
+    font-weight: 600;
+    transition: all .40s ease;
+}
+
+.contact-list i:hover {
+    transform: scale(1.01) translateY(-5px);
+    color: #0ef;
+}
+
+.contact-icons i {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #0ef;
+    border-radius: 50%;
+    font-size: 20px;
+    color: #0ef;
+    text-decoration: none;
+    margin: 30px 15px 30px 0;
+    transition: .5s ease;
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: calc(.2s *var(--i));
+}
+
+.contact-icons i:hover {
+    background: #0ef;
+    color: #000;
+    box-shadow: 0 0 20px #0ef;
+}
+
+.contact-form form {
+    position: relative;
+}
+
+.contact-form form input,
+form textarea {
+
+    border: none;
+    outline: none;
+    width: 90%;
+    padding: 18px;
+    background: #555557;
+    color: #000;
+    font-size: 1rem;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+    border-radius: 0.5rem;
+}
+.contact-form textarea{
+    resize: none;
+    height: 220px;
+}
+.contact-form form .send{
+    display: inline-block;
+    padding: 14px 60px;
+    background: #0ef;
+    border-radius: 40px;
+    font-size: 18px;
+    color: #081b29;
+    letter-spacing: 1px;
+    text-decoration: none;
+    font-weight: 600;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    animation-delay: 2s;
+    box-shadow: 0 0 5px #0ef, 0 0 25px #0ef;
+}
+.contact-form form .send:hover{
+    box-shadow:0 0 5px cyan,
+    0 0 25 cyan, 0 0 50px cyan,
+    0 0 100px cyan, 0 0 200px cyan;
+}
+.last-text {
+    align-items: center;
+    text-align: center;
+    font-size: medium;
+    font-weight: 600;
+    background: rgb(7,85, 91);
+    padding: 25px 0;
+    margin-top: 70px;
+
+color: #000000;
+    /* background: #0ef; */
+    /* font-size: 20px; */
+    /* padding: 10px; */
+    border-radius: 0.5rem;
+   
+
+}
+/* .top{
+    position: fixed;
+    bottom: 2.1rem;
+    right: 2.1rem;
+}
+.top i{
+    color: #000000;
+    background: #0ef;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 0.5rem;
+} */
+
+/* Contact section part end */
 
 
 /* Header & Home Section Part Start */
