--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1088,7 +1088,7 @@ color: #000000;
 
 /*  */
 /* Mobile Devices (480px - 767px) */
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
     .header {
         padding: 15px 5%;
     }
@@ -1187,10 +1187,10 @@ color: #000000;
     .contact-icons {
         justify-content: center;
     }
-}
+} */
 
 /* Small Mobile Devices (up to 479px) */
-@media (max-width: 479px) {
+/* @media (max-width: 479px) {
     .home-content h1 {
         font-size: 1.8rem;
     }
@@ -1249,10 +1249,10 @@ color: #000000;
         height: 35px;
         font-size: 1rem;
     }
-}
+} */
 
 /* Landscape Mode */
-@media (max-height: 600px) and (orientation: landscape) {
+/* @media (max-height: 600px) and (orientation: landscape) {
     .home {
         min-height: auto;
         padding: 120px 5% 50px;
@@ -1267,5 +1267,5 @@ color: #000000;
         overflow-y: auto;
         padding: 20px;
     }
-}
+} */
 /*  */
